# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/histreamer/config.gni")

module_output_path = "histreamer/unittest"

group("avbuffer_unit_test") {
  testonly = true
  deps = [
    # ":avbuffer_capi_unit_test",
    ":avbuffer_inner_unit_test",
  ]
}

avbuffer_unittest_cflags = [
  "-std=c++17",
  "-fno-rtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Dprivate=public",
  "-Dprotected=public",
]

#################################################################################################################videodec
ohos_unittest("avbuffer_inner_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./inner",
  ]

  defines = [
    "HST_ANY_WITH_NO_RTTI",
    "MEDIA_OHOS",
  ]

  sources = [
    # "./avbuffer_framework_unit_test.cpp",
    "./avbuffer_func_unit_test.cpp",
    # "./inner/avbuffer_inner_mock.cpp",
    # "./inner/avbuffer_inner_mock_factory.cpp",
  ]

  cflags = avbuffer_unittest_cflags

  public_deps = [
    "$histreamer_root_dir/src:media_foundation_buffer",
    "../common:media_foundation_inner_unit_test",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "graphic_2d:sync_fence",
    "hilog:libhilog",
    "ipc:ipc_core",
    "memory_utils:libdmabufheap",
  ]
}

#################################################################################################################videodec
ohos_unittest("avbuffer_capi_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
    "$histreamer_root_dir/interface/kits/c",
  ]

  defines = [
    "AVBUFFER_CAPI_UNIT_TEST",
    "MEDIA_OHOS",
  ]

  sources = [
    # "./avbuffer_framework_unit_test.cpp",
    "./capi/avbuffer_capi_mock.cpp",
    "./capi/avbuffer_capi_mock_factory.cpp",
  ]

  cflags = avbuffer_unittest_cflags

  public_deps = [
    "$histreamer_root_dir/src:media_foundation_buffer",
    "../common:media_foundation_capi_unit_test",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_2d:surface",
    "graphic_2d:sync_fence",
    "hilog:libhilog",
    "ipc:ipc_core",
    "memory_utils:libdmabufheap",
  ]
}
