# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/histreamer/config.gni")

module_output_path = "histreamer/unittest"

group("format_unit_test") {
  testonly = true
  deps = [
    ":format_capi_unit_test",
    ":format_inner_unit_test",
  ]
}

avcodec_unittest_cflags = [
  "-std=c++17",
  "-frtti",
  "-fexceptions",
  "-Wall",
  "-fno-common",
  "-fstack-protector-strong",
  "-Wshadow",
  "-FPIC",
  "-FS",
  "-O2",
  "-D_FORTIFY_SOURCE=2",
  "-fvisibility=hidden",
  "-Wformat=2",
  "-Wdate-time",
  "-Werror",
  "-Wextra",
  "-Wimplicit-fallthrough",
  "-Wsign-compare",
  "-Wunused-parameter",
]

##################################################################################################################
ohos_unittest("format_capi_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./capi",
    "$histreamer_root_dir/interface/kits/c",
  ]

  cflags = avcodec_unittest_cflags

  sources = [
    "./avformat_unit_test.cpp",
    "./capi/avformat_capi_mock.cpp",
    "./capi/avformat_capi_mock_factory.cpp",
  ]

  public_deps = [ "../common:media_foundation_capi_unit_test" ]
}

##################################################################################################################
ohos_unittest("format_inner_unit_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./",
    "./inner",
    "$histreamer_root_dir/interface/inner_api/buffer",
  ]

  cflags = avcodec_unittest_cflags

  sources = [
    "./avformat_unit_test.cpp",
    "./inner/avformat_inner_mock.cpp",
    "./inner/avformat_inner_mock_factory.cpp",
  ]

  public_deps = [ "../common:media_foundation_inner_unit_test" ]
}
