# Copyright (c) 2021-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# build plugin interface
import("//foundation/multimedia/histreamer/config.gni")

source_set("codec_filters") {
  sources = [
    "async_mode.cpp",
    "audio_decoder/audio_decoder_filter.cpp",
    "audio_encoder/audio_encoder_filter.cpp",
    "codec_filter_base.cpp",
    "codec_filter_factory.cpp",
    "codec_mode.cpp",
    "sync_mode.cpp",
  ]
  if (multimedia_histreamer_enable_video) {
    sources += [ "video_decoder/video_decoder_filter.cpp" ]
    if (multimedia_histreamer_enable_recorder) {
      sources += [ "video_encoder/video_encoder_filter.cpp" ]
    }
  }
  public_configs = [
    "//foundation/multimedia/histreamer:histreamer_presets",
  ]
  public_deps = [ "//foundation/multimedia/histreamer/engine/pipeline:histreamer_pipeline_base" ]
}