# Copyright (c) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# build plugin interface
import("//foundation/multimedia/histreamer/config.gni")
ohos_source_set("codec_filters") {
  subsystem_name = "multimedia"
  part_name = "histreamer"
  include_dirs = [
    "../../../",
    "../../../include",
  ]
  sources = [
    "async_mode.cpp",
    "audio_decoder/audio_decoder_filter.cpp",
    "audio_encoder/audio_encoder_filter.cpp",
    "codec_filter_base.cpp",
    "codec_filter_factory.cpp",
    "codec_mode.cpp",
    "sync_mode.cpp",
  ]
  if (histreamer_enable_video) {
    sources += [ "video_decoder/video_decoder_filter.cpp" ]
    if (histreamer_enable_recorder) {
      sources += [ "video_encoder/video_encoder_filter.cpp" ]
    }
  }
  public_configs = [ "../../../../:histreamer_presets" ]
  public_deps = [
    "../../../foundation:histreamer_foundation",
    "../../../pipeline:histreamer_base",
  ]
  if (hst_is_standard_sys) {
    external_deps = [
        "graphic_2d:surface",
        "ipc:ipc_single",
    ]
  }
}
